# ctgov_MCP

./: .env.example  .gitignore  pyproject.toml  requirements-dev.txt
scripts/: generate_json_schema.py
src/: database.py  server.py
src/ctgov_mcp/: __init__.py  config.py  exceptions.py
src/ctgov_mcp/resources/: __init__.py
src/ctgov_mcp/tools/: __init__.py  analysis.py  query.py
src/mcp_server_aact/: handlers.py  resources.py  tools.py
src/mcp_server_openFDA/: __init__.py  database.py  handlers.py  memo_manager.py  openfda_client.py  resources.py  server.py  tools.py
src/mcp_server_openFDA/resources/: database_schema.json
tests/: conftest.py  test_memo_manager.py  test_openfda_server.py  test_tools.py
tests/test_tools/: test_query.py
