[project]
name = "ctgov_mcp"
version = "0.1.0"
description = "AACT Clinical Trials MCP Server"
requires-python = ">=3.9"
dependencies = [
    "psycopg2-binary",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
